k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flight-price-api

spec:
  selector:
    app: flight-price-api

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
