k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flight-price-api

spec:
  ingressClassName: traefik

  rules:
    - host: flight-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flight-price-api
                port:
                  number: 8000
